--- a/src/components/MySnackbar.scss
+++ b/src/components/MySnackbar.scss
@@ -7,18 +7,20 @@
   cursor: default;
   &-foot {
     justify-content: space-evenly;
+    @media only screen and (max-width: 699px) {
+      flex-direction: column;
+    }
   }
 }
 
 .snack-bar {
-  .snack,
   .footer {
     font-size: 19.666666666666664px;
     color: black;
     text-align: center;
     font-family: 'SuisseIntl';
     line-height: 1.2;
-    margin: 1rem 4.333333333333333vw;
+    margin: 0 1rem 4.333333333333333vw;
     cursor: default;
     padding: 1rem;
     position: relative;
@@ -30,14 +32,13 @@
     box-shadow: 0 1px 2px rgba(255, 23, 68, 0.15);
     transition: all 0.3s ease-in-out;
   }
-  .snack {
-    max-width: 629px;
-    background-color: rgba(255, 23, 68, 0.7);
-  }
   .h4-text {
     width: 33.3%;
     display: flex;
     flex-direction: column;
+    @media only screen and (max-width: 699px) {
+      width: auto;
+    }
     h4 {
       font-size: 19.666666666666664px;
       color: black;
@@ -46,6 +47,9 @@
       line-height: 1.2;
       margin: 0 4.333333333333333vw;
       cursor: default;
+      @media only screen and (max-width: 699px) {
+        margin: 1rem 4.333333333333333vw;
+      }
     }
     h4 + h4 {
       margin-top: 1rem;
@@ -55,6 +59,9 @@
     width: 33.3%;
     display: flex;
     flex-direction: column;
+    @media only screen and (max-width: 699px) {
+      width: auto;
+    }
     h4 {
       font-size: 19.666666666666664px;
       color: black;
@@ -63,6 +70,9 @@
       line-height: 1.2;
       margin: 0 4.333333333333333vw;
       cursor: default;
+      @media only screen and (max-width: 699px) {
+        margin: 1rem 4.333333333333333vw;
+      }
     }
     h4 + h4 {
       margin-top: 1rem;
@@ -71,7 +81,6 @@
 }
 
 .snack-bar {
-  .snack::after,
   .footer::after {
     content: '';
     position: absolute;
@@ -88,14 +97,12 @@
 }
 
 .snack-bar {
-  .snack:hover,
   .footer:hover {
     transform: scale(1);
   }
 }
 
 .snack-bar {
-  .snack:hover::after,
   .footer:hover::after {
     opacity: 1;
   }
