--- a/src/index.css
+++ b/src/index.css
@@ -16,4 +16,5 @@ code {
   src: local("SuisseIntl"),
    url("./fonts/SuisseIntl/SuisseIntl-Book-WebM.ttf") format("truetype");
   font-weight: medium;
+  font-display: swap;
   }
